--- a/languages/coblocks.pot
+++ b/languages/coblocks.pot
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-05-20T23:16:54+00:00\n"
+"POT-Creation-Date: 2019-05-20T23:20:40+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.1.0\n"
 "X-Domain: coblocks\n"
@@ -1124,7 +1124,7 @@ msgid "Enter your Google API key to render a map."
 msgstr ""
 
 #: src/blocks/map/components/edit.js:244
-msgid "Search for a place or address."
+msgid "Enter an address to drop a pin on a Google map."
 msgstr ""
 
 #: src/blocks/map/components/edit.js:250
@@ -1133,7 +1133,7 @@ msgstr ""
 
 #: src/blocks/map/components/edit.js:257
 #: src/blocks/map/components/inspector.js:154
-msgid "Enter location name or address…"
+msgid "Search for a place or address…"
 msgstr ""
 
 #: src/blocks/map/components/edit.js:266
