Add menu item image schema prop.

--- a/languages/coblocks-js.pot
+++ b/languages/coblocks-js.pot
@@ -3,26 +3,32 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "X-Generator: babel-plugin-makepot\n"
 
-#: src/blocks/menu/menu-item/components/edit.js:120
-msgid "Drop file to replace"
+#: src/blocks/menu/components/edit.js:27
+msgid "Appetizers"
 msgstr ""
 
-#: src/blocks/menu/menu-item/components/edit.js:134
-msgid "Remove Image"
+#: src/blocks/menu/components/edit.js:32
+msgid "Bread Sticks"
 msgstr ""
 
-#: src/blocks/menu/menu-item/components/edit.js:174
-msgid "Edit media"
+#: src/blocks/menu/components/edit.js:43
+msgid "Onion Rings"
 msgstr ""
 
-#: src/blocks/menu/menu-item/components/edit.js:210
-msgid "Add menu item..."
+#: src/blocks/menu/components/edit.js:44
+msgid ""
+"Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis "
+"vestibulum."
 msgstr ""
 
-#: src/blocks/menu/menu-item/components/edit.js:218
-msgid "Add description..."
+#: src/blocks/menu/components/edit.js:47
+msgid "$4.75"
 msgstr ""
 
-#: src/blocks/menu/menu-item/components/edit.js:227
-msgid "$0.00"
+#: src/blocks/menu/components/edit.js:56
+msgid "Grid"
+msgstr ""
+
+#: src/blocks/menu/components/edit.js:63
+msgid "List"
 msgstr ""
