Introduce Logo/Badges Block (#655)
* WIP: Introduce Logo/
Badges block

* Updates

* Updates

* Saving working. Still tweaking resizing functionality.

* Updates

* Tweaks

* Use existing grayscale utility class

* Adjust/clean styling

* Tweaks

* Update greyscale in save

* Tweak to utilize ResizableBox component

* Refactor

* Tweak styles, cleanup

* Remove event, and class on logo image

* Tweaks based on feedback

* Add missing ;

* Remove sprintf component import

* Updates

* Updates

* Fix eslint warnings/errors

* Disable left and right controls for first and last logo.

* Pass minWidth as prop instead of calculating it manually.

* Use the image index we have over looking it up with jQuery.

* Clean edit styles

* Set default image widths on upload

* Tweaks

* Tweak badge, add description

* Ensure the total width of all logos are not greater than 100%

* Add width as an attribute

* Remove wrapper element from img.

* Remove wrapper from css.

* Width attribute should be passed to img element

* Re-add the left and right resize controls.

* Move icon into the block's directory

* Fix default width calculations.

* Organize files with updated method

* Use margin instead of padding

* Logo block edits (#687)

* Working

* Rename to 'logos'

* Implement block.json

* Add todo comments

* Set imageChunks to 5 if fullwidth alignment

* Touch up row

* Add edit logos controls

* Set different value for wide and full

* Fix resizing

* Fix selected upload issue

* ESLint

* Tweak grayscale to make images black

* No need to deconstruct setAttributes here

* Update our filter logic on delete

* Cleaning up edit component.

* Reverting a debugging change.

* Pass our gallery images to the media placeholder

--- a/languages/coblocks-js.pot
+++ b/languages/coblocks-js.pot
@@ -3,55 +3,10 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "X-Generator: babel-plugin-makepot\n"
 
-#: src/blocks/food-and-drinks/food-item/edit.js:144
-msgid "Drop image to replace"
+#: src/blocks/logos/edit.js:69
+msgid "Logos & Badges"
 msgstr ""
 
-#: src/blocks/food-and-drinks/food-item/edit.js:157
-msgid "Remove Image"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:222
-msgid "Add title..."
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:233
-#: src/blocks/food-and-drinks/food-item/save.js:65
-msgid "Spicy"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:253
-msgid "Hot"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:275
-#: src/blocks/food-and-drinks/food-item/save.js:81
-msgid "Vegetarian"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:301
-#: src/blocks/food-and-drinks/food-item/save.js:89
-msgid "Gluten Free"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:324
-#: src/blocks/food-and-drinks/food-item/save.js:97
-msgid "Pescatarian"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:345
-#: src/blocks/food-and-drinks/food-item/save.js:105
-msgid "Vegan"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:363
-msgid "Add description..."
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/edit.js:372
-msgid "$0.00"
-msgstr ""
-
-#: src/blocks/food-and-drinks/food-item/save.js:73
-msgid "Spicier"
+#: src/blocks/logos/edit.js:70
+msgid "Drag images, upload new ones or select files from your library."
 msgstr ""
