--- a/changelog.txt
+++ b/changelog.txt
@@ -3,36 +3,67 @@
 = 1.15.0 =
 
 ### Features
+* Add [new Collage Gallery](https://github.com/godaddy/coblocks/pull/907) block
+* Add [new CSS utility classes](https://github.com/godaddy/coblocks/pull/941) to enable better design integration with themes
+* Add [new thumbnail navigation and responsive height controls](https://github.com/godaddy/coblocks/pull/839) to the Carousel block
+* Add [new lightbox support](https://github.com/godaddy/coblocks/pull/840) to Masonry and Stacked gallery blocks
 
 ### Enhancements
+* Improve the [experience of the Map block](https://github.com/godaddy/coblocks/issues/917) when applying an address
+* [Remove redirect](https://github.com/godaddy/coblocks/pull/925) to plugin's admin page when activating CoBlocks
+* Convert [Alert block text alignment](https://github.com/godaddy/coblocks/pull/880) setting to use utility classes
+* Convert [Click-to-Tweet block text alignment](https://github.com/godaddy/coblocks/pull/881) setting to use utility classes
+* Convert [Pricing Table block text alignment](https://github.com/godaddy/coblocks/pull/882) setting to use utility classes
+* Convert [Row block text alignment](https://github.com/godaddy/coblocks/pull/884) setting to use utility classes
+* Convert [Share block text alignment](https://github.com/godaddy/coblocks/pull/897) setting to use utility classes
+* Convert [Icon block text alignment](https://github.com/godaddy/coblocks/pull/932) setting to use utility classes
+* [Update Media Card toolbar icons](https://github.com/godaddy/coblocks/pull/935) to match the improved Gutenberg iconography
+* [Update the Services block icons](https://github.com/godaddy/coblocks/pull/934)
+* [Remove orientation sidebar controls](https://github.com/godaddy/coblocks/pull/914) on the Shape Divider block
+* Improve the [Map block description](https://github.com/godaddy/coblocks/pull/910)
+* [Prevent Styles panel opening by default](https://github.com/godaddy/coblocks/pull/909) on the Food and Drinks block
+* [Disable HTML editing](https://github.com/godaddy/coblocks/pull/908) of gallery blocks
+* Add [block icon to the media placeholder](https://github.com/godaddy/coblocks/issues/919) on the Logos and Badges block
+* [Remove the default block appender](https://github.com/godaddy/coblocks/pull/892) (added in Gutenberg 6.5) on the Row block
+* [Display the "Add" accordion item button](https://github.com/godaddy/coblocks/pull/836) only when the parent block is selected
+* [Remove background color and image support](https://github.com/godaddy/coblocks/pull/913) from gallery blocks
+* [Add top/bottom marging removal](https://github.com/godaddy/coblocks/pull/912) toggles to the gallery blocks
+* Removed a screenshot to [prevent a potential trademark violation](https://github.com/godaddy/coblocks/pull/911)
+* Minor code cleanups ([#924](https://github.com/godaddy/coblocks/pull/924), [#931](https://github.com/godaddy/coblocks/pull/931), [#933](https://github.com/godaddy/coblocks/pull/933))
 
 ### Bug Fixes
+* [Remove inherit colors fallback](https://github.com/godaddy/coblocks/pull/940) from the Authors, Features, Media Card, and Row blocks
+* [Fix the block icon](https://github.com/godaddy/coblocks/pull/937) shown in the Food Item block's sidebar and toolbar
+* Fix [incorrect image height](https://github.com/godaddy/coblocks/pull/929) being applied on the Masonry block
+* Prevent the [style preview from resizing](https://github.com/godaddy/coblocks/pull/887) when resizing an image
+* Fix [alignment of images within the Features block](https://github.com/godaddy/coblocks/pull/885)
+* Fix [background image upload error](https://github.com/godaddy/coblocks/pull/906) when using drag and drop on the Hero block
 
 
 = 1.14.0 =
 
 ### Features
-* New image block style can be applied which [masks images with a wave shape](https://github.com/godaddy/coblocks/pull/877)
-* [Image cropping](https://github.com/godaddy/coblocks/pull/749) within the Image and Cover blocks
+* Add new [Crop Settings panel](https://github.com/godaddy/coblocks/pull/749) to the Image and Cover blocks to allow image cropping
+* Add [font size, background and text color controls](https://github.com/godaddy/coblocks/pull/808) to the Author block
+* Add new Image block styles to [mask images with a wave shape](https://github.com/godaddy/coblocks/pull/877)
 
 ### Enhancements
-* Improved the [context of strings](https://github.com/godaddy/coblocks/pull/852) for translators
-* [New filter in the Form block](https://github.com/godaddy/coblocks/pull/834) to prevent wp_mail from sending mail
-* CoBlocks [admin page has been moved](https://github.com/godaddy/coblocks/pull/746) under Tools
-* [Shortened the button placeholder](https://github.com/godaddy/coblocks/pull/878) text within the Hero block
-* [Exposed additional controls](https://github.com/godaddy/coblocks/pull/765) from [Flickity](https://flickity.metafizzy.co/) in the Carousel block
-* Font size, background and text color [controls added to the Author block](https://github.com/godaddy/coblocks/pull/808)
-* [Pricing table toolbar control](https://github.com/godaddy/coblocks/pull/811) updated to follow new Gutenberg pattern
-* [Row block toolbar control](https://github.com/godaddy/coblocks/pull/827) updated to follow new Gutenberg pattern
-* Groundwork added for [improved automated testing of blocks](https://github.com/godaddy/coblocks/pull/835) with Jest
+* Improve the [context of strings](https://github.com/godaddy/coblocks/pull/852) for translators
+* Add a [new filter](https://github.com/godaddy/coblocks/pull/834) in the Form block to prevent wp_mail from sending mail
+* Move the CoBlocks [top-level admin page](https://github.com/godaddy/coblocks/pull/746) under Tools
+* Shorten [the Button block placeholder text](https://github.com/godaddy/coblocks/pull/878) within the Hero block
+* Add [additional carousel controls](https://github.com/godaddy/coblocks/pull/765) to the Carousel block
+* Update the [Pricing Table block toolbar control](https://github.com/godaddy/coblocks/pull/811) to follow new Gutenberg patterns
+* Update the [Row block toolbar control](https://github.com/godaddy/coblocks/pull/827) to follow new Gutenberg patterns
+* Lay the groundwork for [improved automated tests for blocks](https://github.com/godaddy/coblocks/pull/835) using Jest
 
 ### Bug Fixes
-* Styles [preview scaling has been fixed](https://github.com/godaddy/coblocks/pull/879) in the Icon block with the Gutenberg plugin
-* Pricing Table will now [use all available width](https://github.com/godaddy/coblocks/pull/844) with any number of tables
-* [Bottom margin removed](https://github.com/godaddy/coblocks/pull/845) from last item within the Feature block
-* Improve the [spacing between figure and content](https://github.com/godaddy/coblocks/pull/846) on the Services block
-* Hero block [toolbar is now accessible](https://github.com/godaddy/coblocks/pull/838) when a Group block precedes it
-* [Aligned responsive control SVG icons](https://github.com/godaddy/coblocks/pull/820) in Firefox and Edge
+* Fix the [styles preview](https://github.com/godaddy/coblocks/pull/879) in the Icon block in Gutenberg 6.3+
+* Fix one column Pricing Table block display to use the [full available width](https://github.com/godaddy/coblocks/pull/844)
+* Remove [margin bottom](https://github.com/godaddy/coblocks/pull/845) from the last item within the Feature block
+* Improve the [spacing between the figure and content elements](https://github.com/godaddy/coblocks/pull/846) in the Services block
+* Avoid z-index issues with the [Hero block toolbar](https://github.com/godaddy/coblocks/pull/838)
+* Fix [misaligned responsive control SVG icons](https://github.com/godaddy/coblocks/pull/820) in Firefox and Edge
 
 
 = 1.13.0 =
